<resources>
    <string name="app_name">MoonPhase</string>
    <string name="moonPhase_dateTime_format">dd.MM\nHH:mm</string>
    <string name="moonPhase_name_default">Moon Phase Name</string>
    <string name="moonPhase_age_label">Age:</string>
    <string name="moonPhase_illumination_label">Illumination:</string>
    <string name="moonPhase_age_default">10</string>
    <string name="moonPhase_illumination_default">100%</string>

    <string name="moonPhase_newMoon">New Moon</string>
    <string name="moonPhase_waxingCrescent">Waxing Crescent</string>
    <string name="moonPhase_firstQuarter">First Quarter</string>
    <string name="moonPhase_waxingGibbous">Waxing Gibbous</string>
    <string name="moonPhase_fullMoon">Full Moon</string>
    <string name="moonPhase_waningGibbous">Waning Gibbous</string>
    <string name="moonPhase_lastQuarter">Third Quarter"</string>
    <string name="moonPhase_waningCrescent">Waning Crescent</string>
    
    <string name="app_widget_description">This is an app widget description</string>

    <string name="notification_title_format">%1$s has arrived!</string>


    <string name="menu_options_settings">Settings</string>
    <string name="settings_notification_lbl_text">Notification configuration:</string>
    <string name="settings_notification_sm_text">Notify</string>
</resources>